--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">Mythica Rescue</a>
                   </span>
 
                   <ul id="menu">
