--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">We help give animals a voice.</h1>
+                        <h1 class="line anim-typewriter">One pill makes you larger
+And one pill makes you small
+And the ones that mother gives you
+Don't do anything at all
+Go ask Alice
+When she's ten feet tall...</h1>
                   </div>
             </div>
 
