--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">Welcome to Mythhica .</h1>
+                        <h1 class="line anim-typewriter">Down the rabbit hole. Welcome to Mythhica...</h1>
                   </div>
             </div>
 
