--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">Stay in Mythhica, and we'll show you how deep the rabbit hole goes.</p>
                                     </div>
                               </div>
                         </div>
