--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="MYTTHICA">
 
-      <title>About Me | Portfolio Website Template | CODEGRID</title>
+      <title>
+         About Us| Portfolio Website Template | CODEGRID</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -35,7 +36,7 @@
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
                         <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
