--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">MYTTHICA</a>
                   </span>
 
                   <ul id="menu">
