--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Come to Mythhica, and we'll show you how deep the rabbit hole goes.</p>
+                                          <p class="wow fadeInUp">We'll show you how deep the rabbit hole goes.</p>
                                     </div>
                               </div>
                         </div>
@@ -151,7 +151,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @mythhica</h4>
                                           <br><br>
                                     </div>
 
@@ -170,7 +170,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">mythhica@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
