--- a/work.html
+++ b/work.html
@@ -29,13 +29,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">MYTHHICA</a>
                   </span>
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -50,8 +50,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -68,7 +68,7 @@
                         <div class="row">
                               <div class="col-lg-8">
 
-                                    <h3 class="wow fadeInUp" data-wow-delay="1s">work.</h3><br>
+                                    <h3 class="wow fadeInUp" data-wow-delay="1s">donate.</h3><br>
                                     <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
 
                               </div>
@@ -79,48 +79,7 @@
             <!--------------- hero section ends here --------------->
 
             <!--------------- projects section starts here --------------->
-            <div class="container-fluid">
-
-                  <div class="whitespace"></div>
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-8"></div>
-
-                        <div class="col-lg-4 project project1 wow fadeInUp" data-wow-delay="1.4s" onclick="location.href='project.html'"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-7"></div>
-
-                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-1"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-1"></div>
-
-                        <div class="col-lg-5 project project4 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-            </div>
-
+           
             <!--------------- projects section ends here --------------->
 
             <!--------------- footer starts here --------------->
@@ -131,7 +90,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">welcome to MYTHHICA, we'll show you how deep the rabbit hole goes.</p>
                                     </div>
                               </div>
                         </div>
@@ -148,7 +107,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @mytthica</h4>
                                           <br><br>
                                     </div>
 
@@ -167,7 +126,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">mythhica@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
