--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="Alice in Suburbia">
+      <meta name="author" content="MYTHHICA">
 
       <title>Portfolio Website Template | CODEGRID</title>
 
@@ -78,7 +78,7 @@
             <div class="container-fluid">
                   <br><br><br>
 
-                  <h6>Selected projects</h6>
+                  <h6>Select an occupant</h6>
 
                   <div class="vertical"></div>
                   <br>
