--- a/contact.html
+++ b/contact.html
@@ -29,13 +29,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">MYTHHICA</a>
                   </span>
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -50,8 +50,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -130,7 +130,8 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">You have to let it all go, Neo. Fear, doubt, and disbelief, Free your mind.
+.. Morpheus</p>
                                     </div>
                               </div>
                         </div>
