--- a/about.html
+++ b/about.html
@@ -76,12 +76,11 @@
 
                         <div class="row">
                               <div class="col-lg-12">
-                                    <h3 class="wow fadeInUp" data-wow-delay="1.2s">about me.</h3><br>
+                                    <h3 class="wow fadeInUp" data-wow-delay="1.2s">about us.</h3><br>
 
-                                    <p class="wow fadeInUp">Living with passion is what I strictly adhere to. “Always do what you love” how much ever hackneyed this sounds it holds absolutely true. That's why I travel a lot. Not for the sole reason of “loving” to travel but it helps me to get rid of the world and escape into a different dimension of my own. As I am a travel freak I love freezing the moments I relish. The art of capturing photos is something I am always fascinated by.</p>
+                                    <p class="wow fadeInUp"> I know you're out there. I can feel you now. I know that you're afraid... you're afraid of us. You're afraid of change. I don't know the future. I didn't come here to tell you how this is going to end. I came here to tell you how it's going to begin. I'm going to hang up this phone, and then I'm going to show these people what you don't want them to see. I'm going to show them a world without you. A world without rules and controls, without borders or boundaries. A world where anything is possible. Where we go from there is a choice I leave to you... Neo</p>
 
-                                    <p class="wow fadeInUp" data-wow-delay="0.2s">I am a continuous learner. Learning for me equates to exploring new ideas and growing as an individual. I just cannot imagine my life devoid of designing. I freely express my creativity and imagination by designing. And to give my passion of designing a platform I have a YouTube channel named, Codegrid.</p>
-
+                                    
                               </div>
                         </div>
                   </div>
@@ -98,7 +97,9 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">This is your last chance. After this, there is no turning back. 
+                                                You take the blue pill - the story ends, you wake up in your bed and believe whatever you want to believe. 
+                                                You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes... Morpheus</p>
                                     </div>
                               </div>
                         </div>
@@ -115,7 +116,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @mythhica</h4>
                                           <br><br>
                                     </div>
 
@@ -134,7 +135,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">mythhica@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
