--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -134,7 +134,9 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">We'll show you how deep the rabbit hole goes.</p>
+                                          <p class="wow fadeInUp">This is your last chance. After this, there is no turning back. 
+                                                You take the blue pill - the story ends, you wake up in your bed and believe whatever you want to believe. 
+                                                You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes... Morpheus</p>
                                     </div>
                               </div>
                         </div>
