--- a/donate.html
+++ b/donate.html
@@ -90,7 +90,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">welcome to MYTHHICA, we'll show you how deep the rabbit hole goes.</p>
+                                          <p class="wow fadeInUp">Unfortunately, no one can be told what the Matrix is. You have to see it for yourself...Morpheus</p>
                                     </div>
                               </div>
                         </div>
