--- a/project.html
+++ b/project.html
@@ -33,13 +33,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">MYTHHICA</a>
                   </span>
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -54,8 +54,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">donate<span>.</span></a></li>
+                        <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -76,18 +76,18 @@
 
                                     <div class="row">
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">Country of Origin :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Belgium</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">Date of Birth :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s"> June 2018</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.6s">Breed :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">Lionhead</h6>
                                           </div>
                                     </div>
                                     <br>
@@ -101,39 +101,14 @@
 
             <!--------------- project image section starts here --------------->
 
-            <div class="project-img">
-                  <div class="container">
-                        <br><br>
-                        <div class="row">
-                              <div class="col-md-8">
-                                    <div class="project image wow fadeInUp" data-wow-delay="0.8s"></div>
-                              </div>
-                              <div class="col-md-4">
-                                    <div class="project image wow fadeInUp" data-wow-delay="0.8s"></div>
-                              </div>
-                        </div>
-                  </div>
-            </div>
 
             <!--------------- project image section ends here --------------->
 
-            <br><br>
+           
 
             <!--------------- project nav starts here --------------->
 
-            <div class="project-nav">
-                  <div class="container">
-                        <div class="row">
-                              <div class="col-lg-6 prev">
-                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
-                              </div>
-                              <div class="col-lg-6 next">
-                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-
+    
             <!--------------- project nav starts here --------------->
 
             <div class="whitespace"></div>
