--- a/project.html
+++ b/project.html
@@ -72,7 +72,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">cottontail</h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
@@ -122,7 +122,11 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">Neo:
+                                                What are you trying to tell me? That I can dodge bullets?</p>
+
+<p>Morpheus:
+No, Neo. I'm trying to tell you that when you're ready, you won't have to.</p>
                                     </div>
                               </div>
                         </div>
