--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
 
                                     <h3 class="wow fadeInUp" data-wow-delay="1s">donate.</h3><br>
                                     <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
-
+                                    <button type="submit" name="contact-submit" id="contact-submit" class="send wow fadeInUp">Send Message</button>
                               </div>
                         </div>
                   </div>
