--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <nav>
                   <span id="brand">
                         <a href="index.html">MYTHHICA</a>
+                        <img scr="mlogo.jpeg">
                   </span>
 
                   <ul id="menu">
@@ -60,7 +61,7 @@
             </div>
             <!--------------- navbar ends here --------------->
 
-
+<img scr="mlogo.jpeg">
 
             <!--------------- hero section starts here --------------->
             <div class="hero">
@@ -124,7 +125,7 @@
             </div>
             <!--------------- projects section ends here --------------->
 
-
+<img scr="mlogo.jpeg">
 
             <!--------------- footer starts here --------------->
             <div class="footer">
