--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li><a href="work.html">donate<span>.</span></a></li>
                         <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
+                         <li><a href="canmore.html">contact<span>.</span></a></li>
                   </ul>
 
                   <div id="toggle">
@@ -57,6 +58,7 @@
                         <li><a href="work.html">donate<span>.</span></a></li>
                         <li><a href="about.html">about us<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
+                        <li><a href="canmore.html">contact<span>.</span></a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
