--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">ljasdkljf</a>
+                        <a href="index.html">MYTHHICA</a>
                         <img scr="mlogo.jpeg">
                   </span>
 
