--- a/canmore.html
+++ b/canmore.html
@@ -63,7 +63,7 @@
             <!--------------- hero image starts here --------------->
             <div class="container">
                   <div class="row">
-                        <div class="col-lg-12 about image wow fadeInUp" data-wow-delay="1s"></div>
+                        <div class="col-lg-12 about image1 wow fadeInUp" data-wow-delay="1s"></div>
                   </div>
             </div>
             <!--------------- hero image ends here --------------->
@@ -76,7 +76,7 @@
 
                         <div class="row">
                               <div class="col-lg-12">
-                                    <h3 class="wow fadeInUp" data-wow-delay="1.2s">about us.</h3><br>
+                                    <h3 class="wow fadeInUp" data-wow-delay="1.2s">The Canmore Project.</h3><br>
 
                                     <p class="wow fadeInUp"> I know you're out there. I can feel you now. I know that you're afraid... you're afraid of us. You're afraid of change. I don't know the future. I didn't come here to tell you how this is going to end. I came here to tell you how it's going to begin. I'm going to hang up this phone, and then I'm going to show these people what you don't want them to see. I'm going to show them a world without you. A world without rules and controls, without borders or boundaries. A world where anything is possible. Where we go from there is a choice I leave to you... Neo</p>
 
