--- a/canmore.html
+++ b/canmore.html
@@ -62,9 +62,7 @@
 
             <!--------------- hero image starts here --------------->
             <div class="container">
-                  <div class="row">
-                        <div class="col-lg-12 about image1 wow fadeInUp" data-wow-delay="1s"></div>
-                  </div>
+                <img src="front.jpg">
             </div>
             <!--------------- hero image ends here --------------->
 
