--- a/canmore.html
+++ b/canmore.html
@@ -62,7 +62,9 @@
 
             <!--------------- hero image starts here --------------->
             <div class="container">
-                <img src="front.jpg">
+                 <div class="row">
+                        <div class="col-lg-12 canmore images wow fadeInUp" data-wow-delay="1s"></div>
+                  </div>
             </div>
             <!--------------- hero image ends here --------------->
 
