--- a/canmore.html
+++ b/canmore.html
@@ -63,7 +63,7 @@
             <!--------------- hero image starts here --------------->
             <div class="container">
                  <div class="row">
-                        <div class="col-lg-12 about images wow fadeInUp" data-wow-delay="1s"></div>
+                        <div class="col-lg-12 canmore wow fadeInUp" data-wow-delay="1s"></div>
                   </div>
             </div>
             <!--------------- hero image ends here --------------->
