--- a/canmore.html
+++ b/canmore.html
@@ -63,8 +63,9 @@
             <!--------------- hero image starts here --------------->
             <div class="container">
                  <div class="row">
-                        <div class="col-lg-12 about canmore wow fadeInUp" data-wow-delay="1s"></div>
+                        <div class="canmore wow fadeInUp" data-wow-delay="1s"></div>
                   </div>
+                  <img src="front1.jpg">
             </div>
             <!--------------- hero image ends here --------------->
 
