--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">MYTHHICA</a>
-                        <img scr="mlogo.jpeg">
+                        <!--<a href="index.html">MYTHHICA</a>-->
+                        
                   </span>
 
                   <ul id="menu">
