--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav>
                   <span id="brand">
                         <!--<a href="index.html">MYTHHICA</a>-->
-                        
+                       <img src="mlogo.jpg" class="image1"> 
                   </span>
 
                   <ul id="menu">
